@@ -75,7 +75,7 @@ my $schema = DBICTest->init_schema();
 # test both sides of a 1:(1|0)
 {
   for my $reldir ('might_have', 'belongs_to') {
-    my $artist = $schema->resultset('Artist')->next;
+    my $artist = $schema->resultset('Artist')->find(1);
 
     my $new_track = $schema->resultset('Track')->new ({
       title => "$reldir: First track of latest cd",
