@@ -50,7 +50,7 @@ $schema->storage->debugcb(sub { $queries++ });
 $schema->storage->debug(1);
 
 $rs = $schema->resultset('Tag')->search(
-  {},
+  { 'me.tagid' => 1 },
   {
     prefetch => { cd => 'artist' }
   }
@@ -86,7 +86,7 @@ $queries = 0;
 
 $schema->storage->debugcb(sub { $queries++; });
 
-$cd = $schema->resultset('CD')->find(1, { prefetch => { cd_to_producer => 'producer' } });
+$cd = $schema->resultset('CD')->find(1, { prefetch => { cd_to_producer => 'producer' }, order_by => 'producer.producerid' });
 
 is($cd->producers->first->name, 'Matt S Trout', 'many_to_many accessor ok');
 
@@ -289,10 +289,13 @@ is_deeply( $prefetch_result, $nonpre_result,
 
 $queries = 0;
 
-is($art_rs_pr->search_related('cds')->search_related('tracks')->first->title,
-   'Fowlin',
-   'chained has_many->has_many search_related ok'
-  );
+is_deeply(
+  [ sort map { $_->title } $art_rs_pr->search_related('cds')->search_related('tracks')->all ],
+  [ 'Apiary', 'Beehind You', 'Boring Name', 'Boring Song', 'Fowlin', 'Howlin',
+    'No More Ideas', 'Sad', 'Sticky Honey', 'Stripy', 'Stung with Success',
+    'Suicidal', 'The Bees Knees', 'Under The Weather', 'Yowlin' ],
+  'chained has_many->has_many search_related ok'
+);
 
 is($queries, 0, 'chained search_related after has_many->has_many prefetch ran no queries');
 
